// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimalsService findAll should find all animals 1`] = `
[
  {
    "animalName": "Human",
    "createdAt": 2023-03-19T18:27:12.933Z,
    "description": "test description",
    "type": "MAMMALS",
  },
]
`;

exports[`AnimalsService findAll should throw Internal Exception Error when something goes wrong with mongodb connection 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsService findOne should return one animal 1`] = `
{
  "_id": {
    "_id": "507f1f77bcf86cd799439011",
  },
  "animalName": "Human",
  "createdAt": 2023-03-19T18:27:12.933Z,
  "description": "test description",
  "type": "MAMMALS",
}
`;

exports[`AnimalsService findOne should throw error InternalServerErrorException when mongodb fails 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsService findOne should throw error NotFoundException --> Not Found, when animal does not exist 1`] = `[NotFoundException: Not Found]`;

exports[`AnimalsService update should return updated animal 1`] = `
{
  "_id": {
    "_id": "507f1f77bcf86cd799439011",
  },
  "animalName": "Cat",
  "createdAt": 2023-03-19T18:27:12.933Z,
  "description": "description after update",
  "type": "BIRDS",
}
`;

exports[`AnimalsService update should throw error InternalServerErrorException when mongodb fails 1`] = `[InternalServerErrorException: Internal Server Error]`;

exports[`AnimalsService update should throw error NotFoundException --> Not Found, when animal does not exist 1`] = `[NotFoundException: Not Found]`;
